Outliner displaying same object twice #57558

Closed
opened 2018-11-01 14:13:56 +01:00 by Sam Van Hulle · 11 comments

System Information
Linux, GTX 1080

Blender Version
Broken: 2.80 (10d7ebc469b)

Short description of error
If there are zero collections in the blend file, the Outliner shows the oldest object in the scene twice.
Deleting one also removes the other. The weird thing is that deleting the collection triggers the bug, even if the object wasn't part of it, or even created after the collection was deleted.

Exact steps for others to reproduce the error

  1. Just delete the default Collection.
    Possibly related:
  2. Creating a new Collection and linking it to the scene hides all other objects in the Outliner, except this oldest one, except in View Layer mode.
**System Information** Linux, GTX 1080 **Blender Version** Broken: 2.80 (10d7ebc469b) **Short description of error** If there are zero collections in the blend file, the Outliner shows the oldest object in the scene twice. Deleting one also removes the other. The weird thing is that deleting the collection triggers the bug, even if the object wasn't part of it, or even created after the collection was deleted. **Exact steps for others to reproduce the error** 1. Just delete the default Collection. Possibly related: 2. Creating a new Collection and linking it to the scene hides all other objects in the Outliner, except this oldest one, except in View Layer mode.
Author

Added subscriber: @frameshift

Added subscriber: @frameshift

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Can confirm.
Seems to be "Scenes" display_mode only though? (BlenderFile > Objects or Data API > Objects dont seem to have the duplicate entry -- and View Layer is also fine as @frameshift already mentioned)

Can confirm. Seems to be "Scenes" display_mode only though? (`BlenderFile > Objects` or `Data API > Objects` dont seem to have the duplicate entry -- and `View Layer` is also fine as @frameshift already mentioned)
Bastien Montagne was assigned by Philipp Oeser 2018-11-01 15:38:35 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

bpy.context.scene.objects lenght actually increase whereas bpy.data.objects doesnt.

If I skip BKE_libblock_remap() in BKE_libblock_delete() [called at the end of BKE_collection_delete()] that doesnt happen...

@mont29: mind having a look?

`bpy.context.scene.objects` lenght actually increase whereas `bpy.data.objects` doesnt. If I skip `BKE_libblock_remap()` in `BKE_libblock_delete()` [called at the end of `BKE_collection_delete()`] that doesnt happen... @mont29: mind having a look?

Cannot reproduce that with current master, does it still happen for you?

Cannot reproduce that with current master, does it still happen for you?

Added subscriber: @brecht

Added subscriber: @brecht

I can still reproduce it. Note you need to go to the Scenes view of the outliner.

I can still reproduce it. Note you need to go to the Scenes view of the outliner.

Ah ok, got it.

Ah ok, got it.

This issue was referenced by blender/blender@b785586232

This issue was referenced by blender/blender@b7855862327043b858c5787864ada6f2a2c86ea4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57558
No description provided.